# NIRA

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_REPORT.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  system_validation.py
.github/: pull_request_template.md
.nira_data/: episodic.sqlite3  workflow_learning.sqlite3
.playwright-mcp/: page-2026-05-17T19-25-58-730Z.yml  page-2026-05-17T19-26-13-296Z.yml
config/: __init__.py  logger.py  settings.py
core/: __init__.py  platform.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: ACCESSIBILITY_REVIEW.md  API.md  ARCHITECTURE.md  CASE_STUDY.md  DATABASE.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENGINEERING_DECISIONS.md  INTERVIEW_GUIDE.md  MATURITY_GAP_MATRIX.md  PERFORMANCE_REPORT.md  PROJECT_IMPROVEMENT_PLAN.md  SECURITY_REVIEW.md  TEST_REPORT.md  TROUBLESHOOTING.md  VERSION_ROADMAP.md
local_llm/: README.md  __init__.py  llama_cpp_server.py  query_example.py  requirements.txt
nira/: MERGE_REPORT.md  README.md  __init__.py  __main__.py  config.py  logging_setup.py  main.py  performance.py  requirements.txt  system_validation.py  workflows.dsl
nira_agent/: __init__.py  __main__.py
nira_core/: __init__.py  bootstrap.py
nira_visual/: index.html  script.js  style.css
plugins/: __init__.py  base.py  calendar_plugin.py  manager.py  news_plugin.py  weather_plugin.py
scripts/: capture-ui-audit.ps1  pull_models.sh  record-demo.ps1  run-demo.ps1  run_api.sh  setup_linux.sh
tests/: conftest.py  test_adaptive_orchestration.py  test_api_contract.py  test_capabilities_reflection.py  test_cli.py  test_config_routing.py  test_context_memory.py  test_conversation_store.py  test_event_bus.py  test_finalization_runtime.py  test_goal_executor.py  test_inference_sandbox_tools.py  test_intelligence.py  test_interface.py  test_knowledge_base.py  test_llama_runtime.py  test_memory_runtime.py  test_models.py  test_operational_hardening.py  test_permission_policy.py  test_planner.py  test_project_diagnostic.py  test_state_layer.py  test_task_graph.py  test_tools.py  test_usage_optimization.py  (+1 more)
(+277 files in other folders)
