[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nira-local-runtime"
version = "0.3.0"
description = "Autonomous modular AI assistant runtime for NIRA"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "psutil>=5.9.8",
  "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nira*", "core*", "config*", "plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
